2017-08-10  Nan Wang  <n_wang@apple.com>

        AX: crash at WebCore::AccessibilityObject::supportsARIALiveRegion() const + 24
        https://bugs.webkit.org/show_bug.cgi?id=175340
        <rdar://problem/33782159>

        Reviewed by Chris Fleizach.

        * accessibility/add-children-pseudo-element-expected.txt: Added.
        * accessibility/add-children-pseudo-element.html: Added.
        * accessibility/resources/svg-circle.svg: Added.

2017-08-10  Miguel Gomez  <magomez@igalia.com>

        Unreviewed GTK+ gardening. Update expectations of several tests failing at r220516.

        * platform/gtk/TestExpectations:

2017-08-09  Nan Wang  <n_wang@apple.com>

        LayoutTest accessibility/presentation-role-iframe.html is a flaky failure
        https://bugs.webkit.org/show_bug.cgi?id=175194

        Reviewed by Chris Fleizach.

        In the test we have no way to control which iframe will be loaded first.
        Output the logs at the end of the test so that they are in order.

        * accessibility/presentation-role-iframe.html:

2017-08-09  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r219334.
        https://bugs.webkit.org/show_bug.cgi?id=175398

        Caused bug 175023 (Requested by ap on #webkit).

        Reverted changeset:

        "[SVG] Leak in SVGAnimatedListPropertyTearOff"
        https://bugs.webkit.org/show_bug.cgi?id=172545
        http://trac.webkit.org/changeset/219334

2017-08-09  Kirill Ovchinnikov  <kirill.ovchinnikov@lge.com>

        Old subtitle track is not deleted on 'src' attribute change event
        https://bugs.webkit.org/show_bug.cgi?id=175031

        Reviewed by Eric Carlson.

        * media/track/text-track-src-change-expected.txt: Added.
        * media/track/text-track-src-change.html: Added.

2017-08-09  Ms2ger  <Ms2ger@igalia.com>

        [GTK] [WPE] Update expectations for global-constructors-attributes.html.
        https://bugs.webkit.org/show_bug.cgi?id=175373
